--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "jszip": "^3.10.1",
+    "papaparse": "^5.4.1",
     "vue": "^3.4.37"
   },
   "devDependencies": {
